--- a/framework/less/widgets.less
+++ b/framework/less/widgets.less
@@ -42,6 +42,7 @@
 
             }
             td.atk-table-row-icon {
+                border: none !important;
                 max-width: 0;
                 opacity: 0;
                 padding: 0 !important;
