--- a/playground/css/playground-theme.css
+++ b/playground/css/playground-theme.css
@@ -2107,122 +2107,85 @@ body,
 *[class*=atk-show-] {
   display: none !important;
 }
-*[class*="atk-effect"].atk-effect-danger,
-*[class*="atk-effect"][class*="atk-button"].atk-effect-danger {
-  color: #ff2d1a !important;
+.atk-effect-success {
+  background-color: #e9f9e9;
+  color: #25c425;
 }
-*[class*="atk-effect"].atk-effect-warning,
-*[class*="atk-effect"][class*="atk-button"].atk-effect-warning {
-  color: #f7a600 !important;
-}
-*[class*="atk-effect"].atk-effect-success,
-*[class*="atk-effect"][class*="atk-button"].atk-effect-success {
+.atk-effect-success[class*="atk-button"] {
   color: #25c425 !important;
 }
-*[class*="atk-effect"].atk-effect-info,
-*[class*="atk-effect"][class*="atk-button"].atk-effect-info {
-  color: #2bacd7 !important;
-}
-*[class*="atk-effect"].atk-label.atk-effect-danger,
-*[class*="atk-effect"].atk-box.atk-effect-danger {
-  background-color: #ffeae8 !important;
-  border-color: #ffeae8 !important;
-}
-*[class*="atk-effect"].atk-label.atk-effect-danger,
-*[class*="atk-effect"].atk-box.atk-effect-danger,
-*[class*="atk-effect"].atk-label.atk-effect-danger h1,
-*[class*="atk-effect"].atk-box.atk-effect-danger h1,
-*[class*="atk-effect"].atk-label.atk-effect-danger h2,
-*[class*="atk-effect"].atk-box.atk-effect-danger h2,
-*[class*="atk-effect"].atk-label.atk-effect-danger h3,
-*[class*="atk-effect"].atk-box.atk-effect-danger h3,
-*[class*="atk-effect"].atk-label.atk-effect-danger h4,
-*[class*="atk-effect"].atk-box.atk-effect-danger h4,
-*[class*="atk-effect"].atk-label.atk-effect-danger h5,
-*[class*="atk-effect"].atk-box.atk-effect-danger h5,
-*[class*="atk-effect"].atk-label.atk-effect-danger h6,
-*[class*="atk-effect"].atk-box.atk-effect-danger h6 {
-  color: #991b10 !important;
-}
-*[class*="atk-effect"].atk-label.atk-effect-warning,
-*[class*="atk-effect"].atk-box.atk-effect-warning {
-  background-color: #fef6e6 !important;
-  border-color: #fef6e6 !important;
-}
-*[class*="atk-effect"].atk-label.atk-effect-warning,
-*[class*="atk-effect"].atk-box.atk-effect-warning,
-*[class*="atk-effect"].atk-label.atk-effect-warning h1,
-*[class*="atk-effect"].atk-box.atk-effect-warning h1,
-*[class*="atk-effect"].atk-label.atk-effect-warning h2,
-*[class*="atk-effect"].atk-box.atk-effect-warning h2,
-*[class*="atk-effect"].atk-label.atk-effect-warning h3,
-*[class*="atk-effect"].atk-box.atk-effect-warning h3,
-*[class*="atk-effect"].atk-label.atk-effect-warning h4,
-*[class*="atk-effect"].atk-box.atk-effect-warning h4,
-*[class*="atk-effect"].atk-label.atk-effect-warning h5,
-*[class*="atk-effect"].atk-box.atk-effect-warning h5,
-*[class*="atk-effect"].atk-label.atk-effect-warning h6,
-*[class*="atk-effect"].atk-box.atk-effect-warning h6 {
-  color: #946400 !important;
-}
-*[class*="atk-effect"].atk-label.atk-effect-success,
-*[class*="atk-effect"].atk-box.atk-effect-success {
+.atk-effect-success.atk-box {
   background: #e9f9e9 !important;
   border-color: #e9f9e9 !important;
 }
-*[class*="atk-effect"].atk-label.atk-effect-success,
-*[class*="atk-effect"].atk-box.atk-effect-success,
-*[class*="atk-effect"].atk-label.atk-effect-success h1,
-*[class*="atk-effect"].atk-box.atk-effect-success h1,
-*[class*="atk-effect"].atk-label.atk-effect-success h2,
-*[class*="atk-effect"].atk-box.atk-effect-success h2,
-*[class*="atk-effect"].atk-label.atk-effect-success h3,
-*[class*="atk-effect"].atk-box.atk-effect-success h3,
-*[class*="atk-effect"].atk-label.atk-effect-success h4,
-*[class*="atk-effect"].atk-box.atk-effect-success h4,
-*[class*="atk-effect"].atk-label.atk-effect-success h5,
-*[class*="atk-effect"].atk-box.atk-effect-success h5,
-*[class*="atk-effect"].atk-label.atk-effect-success h6,
-*[class*="atk-effect"].atk-box.atk-effect-success h6 {
-  color: #167616 !important;
+input.atk-effect-success {
+  border-color: #25c425 !important;
 }
-*[class*="atk-effect"].atk-label.atk-effect-info,
-*[class*="atk-effect"].atk-box.atk-effect-info {
-  background-color: #eaf7fb !important;
+.atk-effect-success--fill {
+  background-color: #e9f9e9 !important;
+}
+.atk-effect-success--text {
+  color: #25c425 !important;
+}
+.atk-effect-info {
+  background-color: #eaf7fb;
+  color: #2bacd7;
+}
+.atk-effect-info[class*="atk-button"] {
+  color: #2bacd7 !important;
+}
+.atk-effect-info.atk-box {
+  background: #eaf7fb !important;
   border-color: #eaf7fb !important;
 }
-*[class*="atk-effect"].atk-label.atk-effect-info,
-*[class*="atk-effect"].atk-box.atk-effect-info,
-*[class*="atk-effect"].atk-label.atk-effect-info h1,
-*[class*="atk-effect"].atk-box.atk-effect-info h1,
-*[class*="atk-effect"].atk-label.atk-effect-info h2,
-*[class*="atk-effect"].atk-box.atk-effect-info h2,
-*[class*="atk-effect"].atk-label.atk-effect-info h3,
-*[class*="atk-effect"].atk-box.atk-effect-info h3,
-*[class*="atk-effect"].atk-label.atk-effect-info h4,
-*[class*="atk-effect"].atk-box.atk-effect-info h4,
-*[class*="atk-effect"].atk-label.atk-effect-info h5,
-*[class*="atk-effect"].atk-box.atk-effect-info h5,
-*[class*="atk-effect"].atk-label.atk-effect-info h6,
-*[class*="atk-effect"].atk-box.atk-effect-info h6 {
-  color: #1a6781 !important;
+input.atk-effect-info {
+  border-color: #2bacd7 !important;
 }
-*[class*="atk-effect"].atk-effect-danger input[type="text"],
-*[class*="atk-effect"].atk-effect-danger input[type="url"],
-*[class*="atk-effect"].atk-effect-danger input[type="email"],
-*[class*="atk-effect"].atk-effect-danger input[type="password"],
-*[class*="atk-effect"].atk-effect-danger input[type="search"],
-*[class*="atk-effect"].atk-effect-danger input[type="number"],
-*[class*="atk-effect"].atk-effect-danger input[type="date"],
-*[class*="atk-effect"].atk-effect-danger input[type="month"],
-*[class*="atk-effect"].atk-effect-danger input[type="week"],
-*[class*="atk-effect"].atk-effect-danger input[type="time"],
-*[class*="atk-effect"].atk-effect-danger input[type="datetime"],
-*[class*="atk-effect"].atk-effect-danger input[type="datetime-local"],
-*[class*="atk-effect"].atk-effect-danger input[type="tel"],
-*[class*="atk-effect"].atk-effect-danger textarea,
-*[class*="atk-effect"].atk-effect-danger .ui-selectmenu-button {
-  border-color: #ff2d1a;
+.atk-effect-info--fill {
+  background-color: #eaf7fb !important;
+}
+.atk-effect-info--text {
+  color: #2bacd7 !important;
+}
+.atk-effect-warning {
+  background-color: #fef6e6;
+  color: #f7a600;
+}
+.atk-effect-warning[class*="atk-button"] {
+  color: #f7a600 !important;
+}
+.atk-effect-warning.atk-box {
+  background: #fef6e6 !important;
+  border-color: #fef6e6 !important;
+}
+input.atk-effect-warning {
+  border-color: #f7a600 !important;
+}
+.atk-effect-warning--fill {
+  background-color: #fef6e6 !important;
+}
+.atk-effect-warning--text {
+  color: #f7a600 !important;
+}
+.atk-effect-danger {
+  background-color: #ffeae8;
+  color: #ff2d1a;
+}
+.atk-effect-danger[class*="atk-button"] {
+  color: #ff2d1a !important;
+}
+.atk-effect-danger.atk-box {
+  background: #ffeae8 !important;
+  border-color: #ffeae8 !important;
+}
+input.atk-effect-danger {
+  border-color: #ff2d1a !important;
+}
+.atk-effect-danger--fill {
+  background-color: #ffeae8 !important;
+}
+.atk-effect-danger--text {
+  color: #ff2d1a !important;
 }
 html {
   font-family: "Helvetica Neue", "Helvetica", sans-serif;
@@ -2914,6 +2877,7 @@ hr[class*="atk-border"][class*="-thick"] {
   border-top: none;
 }
 [class*="atk-table"] table tbody tr td.atk-table-row-icon {
+  border: none !important;
   max-width: 0;
   opacity: 0;
   padding: 0 !important;
