Amendments for .atk-effect component.

--- a/framework/less/colors.less
+++ b/framework/less/colors.less
@@ -323,7 +323,7 @@
     }
     &.atk-box {
       background: @bgColor !important;
-      border-color: @bgColor !important;
+      border-color: @color !important;
     }
     input& {
       border-color: @color !important;
