--- a/framework/less/misc.less
+++ b/framework/less/misc.less
@@ -69,7 +69,7 @@ img::-moz-selection {
 .atk-width-auto {
   width: auto !important;
 }
-.atk-clear-fix {
+.atk-clearFix {
   .clear-fix;
 }
 .atk-disabled {
