--- a/framework/less/typography.less
+++ b/framework/less/typography.less
@@ -31,6 +31,9 @@ h1, h2, h3, h4, h5, h6 {
     &:first-child {
         margin-top: 0;
     }
+    &:last-child {
+        margin-bottom: 0;
+    }
 }
 h1 { &:extend([class*="atk-text"][class*="-size--5xl"]); }
 h2 { &:extend([class*="atk-text"][class*="-size--3xl"]); }
